--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
- <title>TEENAGEWILDLIFEが間もなく登場</title>
+ <title>Teenage Wildlife</title>
 TEENAGEWILDLIFEが間もなく登場
 <head>
 <body>
-<img src="index.png" alt="index">
+<!img src="index.png" alt="index">
 <body>
